feat: Integrate Gemini AI guide with 3D model state change logic and UI bubble